--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_notification">NotificationActivity</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_regular">RegularActivity</string>
+    <string name="title_activity_result2">Result2Activity</string>
+    <string name="title_activity_special">SpecialActivity</string>
+    <string name="title_activity_big_view_notification">BigViewNotificationActivity</string>
 </resources>
